bug squashing

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -89,7 +89,7 @@ h4 {
 }
 
 .fa-plus {
-    margin: 15px 5px 15px 60px;
+    margin: 15px 5px 0px 60px;
     padding: 5px;
     border-radius: 15px;
 }
@@ -174,6 +174,16 @@ button {
 button:hover {
     background: #2192b8;
     color: whitesmoke;
+}
+
+.reverseColors {
+    background: #2192b8;
+    color: whitesmoke;
+}
+
+.reverseColors:hover {
+    background: lightgray;
+    color: black
 }
 
 .modelButtons .no:hover {
